# qq-xiuxian-bot

./: .env.example  .gitignore  README.md  bot.py  pyproject.toml
docs/: v1-design.md
plugins/: __init__.py
plugins/qxian/: __init__.py
tests/: test_database.py  test_llm.py  test_progression.py  test_services.py
xianbot/: config.py  database.py  domain.py  game_text.py  llm.py  progression.py  repository.py  rules.py  services.py
