[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qxianbot"
version = "0.1.0"
description = "A QQ group text cultivation game bot built with NoneBot2."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "nonebot2[fastapi]>=2.4.0,<3.0.0",
  "nonebot-adapter-onebot>=2.4.6,<3.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "pydantic-settings>=2.3.0,<3.0.0",
  "aiosqlite>=0.20.0,<1.0.0",
]

[project.scripts]
qxianbot = "bot:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "ruff>=0.5.0,<1.0.0",
]

[tool.setuptools.packages.find]
include = ["xianbot*", "plugins*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
